# automate_cisco_sdwan_lab

./: .gitignore  README-generate_sdwan_vars.md  README.md  generate_sdwan_vars.py  pyproject.toml  requirements.txt  sdwan_automation.py  sdwan_base_variables.yml  sdwan_base_vars.yml  sdwan_config.py  sdwan_netlab_base.yml  sdwan_variables-base.yml  sdwan_variables-dev.yml  sdwan_variables-netlab.yml  sdwan_variables-test.yml  sdwan_variables.example.yml  sdwan_variables.gen.yml  sdwan_variables.yml  test-variables.yml  topology.example.yml
components/: __init__.py  sdwan_controller.py  sdwan_edges.py  sdwan_manager.py  sdwan_templates.md  sdwan_validator.py
config-snippets/: edge1-ospf-bgp.txt  edge1-ospf.txt  edge1-via-manager-DO-NOT-USE-FYIONLY.txt  edge2-ospf-bgp.txt  edge2-ospf.txt  edge3-ospf-bgp.txt  edge3-ospf.txt  pe1.txt  pe2.txt  pe3.txt
templates_json/: all-cedges-post-onboarding-template.json  custom-aaa-template.json  custom-vpn0-int-g3-mpls-template.json  custom-vpn0-int-g4-internet-template.json  custom-vpn0-template.json
test-configs/: validator.txt
tests/: test_reboot_device.py
utils/: __init__.py  api.py  component_sync.py  generate_sdwan_vars.py  logging.py  manager_api_status.py  netmiko.py  output.py  sdwan_cert.py  sdwan_config.py  sdwan_sdk.py  vmanage_status.py  vshell.py
